docs: update terraform-docs

--- a/.terraform-docs.yaml
+++ b/.terraform-docs.yaml
@@ -1,12 +1,12 @@
-version: 0.19.0
+version: 0.20.0
 formatter: markdown table
 
 recursive:
   enabled: false
-  include-main: false
 
 settings:
   lockfile: false
+  path: .
 
 output:
   file: README.md
