fix: sync with core template

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@
 # Local .terraform directories
 **/.terraform/*
 
-# Terraform lock file
+# Ignore the root .terraform.lock.hcl file (Child modules don't want this)
 .terraform.lock.hcl
+!examples/**/.terraform.lock.hcl
 
 # IDE/Editor settings
 **/.idea
