--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -20,6 +20,7 @@ lint:
     # Incompatible with some Terraform features: https://github.com/tenable/terrascan/issues/1331
     - terrascan
   enabled:
+    - renovate@40.0.0
     - tofu@1.9.1
     - actionlint@1.7.7
     - checkov@3.2.413
@@ -35,9 +36,9 @@ lint:
       paths:
         - "**/backend.tf.json"
     # Ignore CHANGELOG.md as release-please manages this file
-    - linters: [prettier, markdownlint]
+    - linters: [ALL]
       paths:
-        - CHANGELOG.md
+        - "**/CHANGELOG.md"
 actions:
   enabled:
     - terraform-docs
